@@ -154,6 +154,7 @@ extern AVFilter ff_vf_ciescope;
 extern AVFilter ff_vf_codecview;
 extern AVFilter ff_vf_colorbalance;
 extern AVFilter ff_vf_colorchannelmixer;
+extern AVFilter ff_vf_colorconstancy;
 extern AVFilter ff_vf_colorkey;
 extern AVFilter ff_vf_colorlevels;
 extern AVFilter ff_vf_colormatrix;
