@@ -13,6 +13,7 @@ version <next>:
 - Reimplemented SRCNN filter using DNN inference interface
 - adeclick filter
 - adeclip filter
+- colorconstancy filter (low-level image statistics)
 
 
 version 4.0:
